# mechbench-experiments

./: CLAUDE.md  PHILOSOPHY_AND_DIRECTION.md  SPECULATIVE_DIRECTIONS.md  benchmark.py  hooks.py  pyproject.toml
.claude/: settings.json
experiments/: attention_patterns.py  big_sweep.py  centroid_and_arithmetic.py  export_step_02_for_ui.py  export_step_33_for_ui.py  layer_ablation.py  single_head_ablation.py  smoke_analysis.py  step_01_logit_lens_batch.py  step_02_layer_ablation.py  step_03_side_channel_ablation.py  step_04_sublayer_ablation.py  step_05_attention_patterns.py  step_06_per_head_attention.py  step_07_single_head_ablation.py  step_08_position_logit_lens.py  step_09_causal_tracing.py  step_10_fact_vector_geometry.py  step_11_centroid_and_arithmetic.py  step_12_big_sweep.py  step_13_stress_tests.py  step_14_surface_form_switching.py  step_15_operation_disambiguation.py  step_16_representation_injection.py  step_17_capital_homonym.py  step_18_cohesion_analysis.py  step_19_homonym_side_channel.py  step_20_homonym_layer_ablation.py  step_21_emotion_probes.py  step_22_emotion_probe_logit_lens.py  step_23_emotion_probe_implicit.py  step_24_emotion_probe_intensity.py  step_25_emotion_probes_generated.py  step_26_head_weight_analysis.py  step_27_ov_trajectories.py  step_28_qk_sense_clustering.py  step_29_per_head_emotion_probes.py  step_30_perplexity_probe.py  step_31_perplexity_probe_e2b.py  step_33_dla_factual_sweep.py  (+9 more)
gemma4_mlx_interp/: README.md  __init__.py  _arch.py  _forward.py  _smoke.py  _smoke_e2b.py  _smoke_l1.py  cache.py  errors.py  generate.py  (+6 more)
(+41 files in other folders)
