[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechbench-experiments"
version = "0.1.0"
description = "Mechanistic interpretability experiments against Gemma-family MLX models. Part of the mechbench repo family."
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mechbench-core>=0.1",
    "scikit-learn>=1.7",
]

[tool.setuptools]
py-modules = []
